--- a/index.html
+++ b/index.html
@@ -5,28 +5,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Long's Portfolio</title>
 </head>
-<body>
+<body style="margin:40px">
   <img src="./imgs/rmit_logo.png" alt="logo" width="150px">
   <br>
   <img src="./imgs/profilePicture.jpg" alt="Profile picture" width="150px" style="border-radius: 50%;">
 
   <section id="basicInformation">
       <h1>Long Nguyen (Connell)</h1>
-      <p>Software Engineer</p>
+      <h3>Software Engineer</h3>
       <p>I'm an aspired software engineer who's studying at RMIT.</p>
   </section>
 
   <hr style="border-top: 3px solid #bbb">
 
   <section id="Hobbies/Passion">
-    <h3>🎆 My hobbies 🎆</h3>
+    <h2>🎆 My hobbies 🎆</h2>
     <ul>
       <li>Programming</li>
       <li>Reading (fantasy, science-fiction)</li>
       <li>Entrepreneurship</li>
     </ul>
 
-    <h3>✈️ My Passion ✈️</h3>
+    <h2>✈️ My Passion ✈️</h2>
     <ul>
       <li>Create a successful start-up</li>
       <li>Retire at 30</li>
@@ -36,7 +36,7 @@
   <hr style="border-top: 3px solid #bbb">
 
   <section id="skillset">
-    <h3>⭐⭐ My skillset ⭐⭐</h3>
+    <h2>⭐⭐ My skillset ⭐⭐</h2>
     <ul title="Programming Languages">
       <li>Python: ⭐⭐⭐☆☆ </li>
       <li>C/C++: ⭐⭐☆☆☆</li>
@@ -44,5 +44,16 @@
       <li>HTML/CSS: ⭐☆☆☆☆</li>
     </ul>
   </section>
+
+  <footer style="float: right">
+    <a href="https://www.facebook.com/hoanglong610/" style="text-decoration: none;">
+      <img src="./imgs/Facebook logo.svg" alt="Facebook icon" height="25px">
+    </a>
+
+    <a href="https://www.reddit.com/user/Clickity-Clackity601/" style="text-decoration: none;">
+      <img src="./imgs/Reddit logo.svg" alt="Reddit icon" height="25px">
+    </a>
+  </footer>
+
 </body>
 </html>
